<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.herprogramacion.toolbarapp.DetailActivity">
<item
    android:id="@+id/action_settings"
    android:orderInCategory="100"
    android:title="@string/action_settings"
    app:showAsAction="never" />
<item
    android:id="@+id/action_add"
    android:icon="@drawable/ic_build_white_36dp"
    android:orderInCategory="1"
    android:title="@string/action_PedirServicio"
    app:showAsAction="ifRoom" />
<item
    android:id="@+id/action_favorite"
    android:icon="@drawable/ic_favorite_border_white_36dp"
    android:orderInCategory="2"
    android:title="@string/action_favorite"
    app:showAsAction="ifRoom" />
</menu>