<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fragment para agregar la forma de pago de servicio del cliente.">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="48dp">

            <LinearLayout
                android:id="@+id/way_pay_client"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical"

                android:theme="@style/EditText">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_card_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|number"
                        android:hint="@string/hint_card_number"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_month"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|number"
                        android:hint="@string/hint_month"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|number"
                        android:hint="@string/hint_year" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_security_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_security_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|number"
                        android:hint="@string/hint_security_code"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/hint_first_name"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/hint_last_name"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>